# Zephyr3D

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile.sonar  Dockerfile.wrapper  README.md  conanfile.txt  sonar-project.properties
example/: CMakeLists.txt  CubeSpawner.cpp  CubeSpawner.h  GravityGun.cpp  GravityGun.h  MainScene.cpp  MainScene.h  TestComponent.cpp  TestComponent.h  main.cpp
include/Zephyr3D/: CMakeLists.txt  Engine.cpp  Engine.h  Scene.cpp  Scene.h  ZephyrEngine.cpp  ZephyrEngine.h  init.h
include/Zephyr3D/audio/: AudioManager.cpp  AudioManager.h
include/Zephyr3D/cbs/: IObjectManager.h  Object.cpp  Object.h  ObjectManager.cpp  ObjectManager.h
include/Zephyr3D/cbs/components/: Camera.cpp  (+34 more)
include/Zephyr3D/core/: Clock.cpp  Clock.h  IClock.h  IInput.h  IWindow.h  Input.cpp  Input.h  Math.cpp  Math.h  WindowManager.cpp  WindowManager.h
include/Zephyr3D/dependencies/: imconfig.h  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
include/Zephyr3D/physics/: CollisionObject.cpp  CollisionObject.h  IPhysicalObject.h  IPhysicsManager.h  PhysicsManager.cpp  PhysicsManager.h  PhysicsRenderer.cpp  PhysicsRenderer.h
include/Zephyr3D/rendering/: Cubemap.cpp  Cubemap.h  DrawManager.cpp  DrawManager.h  ICamera.h  IDrawManager.h  IDrawable.h  IGUIWidget.h  IRenderListener.h  IShaderProperty.h  Model.cpp  Model.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h  Primitive.cpp  Primitive.h  Primitives.h  ShaderProgram.cpp  ShaderProgram.h  StaticModel.cpp  StaticModel.h  Texture.cpp  Texture.h
include/Zephyr3D/resources/: AudioClip.cpp  Image.cpp  Image.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  RawTexture.cpp  RawTexture.h  ResourcesManager.cpp  ResourcesManager.h  Sound.cpp  Sound.h
include/Zephyr3D/scenes/: Scene.cpp  Scene.h
include/Zephyr3D/utilities/: Clock.cpp  Clock.h  IInput.h  ITimer.h  IWindow.h  Input.cpp  Input.h  Time.cpp  Time.h  Timer.cpp  Timer.h  Window.cpp  Window.h  WindowManager.cpp  WindowManager.h
test/: CMakeLists.txt  CoreTests.cpp  TestsMain.cpp
(+50 files in other folders)
